--- a/bulkrr/ui/window.ui
+++ b/bulkrr/ui/window.ui
@@ -6,16 +6,16 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>573</width>
-    <height>381</height>
+    <width>562</width>
+    <height>364</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Bulkrr</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" colspan="3">
-    <widget class="QLabel" name="label">
+   <item row="4" column="0">
+    <widget class="QLabel" name="label_4">
      <property name="minimumSize">
       <size>
        <width>0</width>
@@ -29,26 +29,7 @@
       </size>
      </property>
      <property name="text">
-      <string>Last Source Directory:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="QLineEdit" name="dirEdit">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>30</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>16777215</width>
-       <height>30</height>
-      </size>
-     </property>
-     <property name="readOnly">
-      <bool>true</bool>
+      <string>Filename Prefix:</string>
      </property>
     </widget>
    </item>
@@ -76,12 +57,13 @@
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <widget class="QLabel" name="label_2">
          <property name="font">
           <font>
+           <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
@@ -95,12 +77,13 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
         <widget class="QLabel" name="label_3">
          <property name="font">
           <font>
+           <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
@@ -116,26 +99,51 @@
      </widget>
     </widget>
    </item>
-   <item row="3" column="0">
-    <widget class="QLabel" name="label_4">
+   <item row="5" column="2">
+    <widget class="QPushButton" name="renameFilesButton">
      <property name="minimumSize">
       <size>
        <width>0</width>
-       <height>15</height>
+       <height>30</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>16777215</width>
-       <height>15</height>
+       <height>30</height>
       </size>
      </property>
      <property name="text">
-      <string>Filename Prefix:</string>
+      <string>&amp;Rename</string>
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
+   <item row="3" column="0">
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QPushButton" name="editFileQueueButton">
+       <property name="text">
+        <string>Edit File Queue</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="clearFileQueueButton">
+       <property name="text">
+        <string>Clear File Queue</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item row="6" column="0" colspan="3">
+    <widget class="QProgressBar" name="progressBar">
+     <property name="value">
+      <number>0</number>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="0">
     <widget class="QLineEdit" name="prefixEdit">
      <property name="minimumSize">
       <size>
@@ -157,7 +165,7 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
+   <item row="5" column="1">
     <widget class="QLabel" name="extensionLabel">
      <property name="minimumSize">
       <size>
@@ -176,8 +184,8 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="2">
-    <widget class="QPushButton" name="renameFilesButton">
+   <item row="1" column="0" colspan="2">
+    <widget class="QLineEdit" name="dirEdit">
      <property name="minimumSize">
       <size>
        <width>0</width>
@@ -190,15 +198,27 @@
        <height>30</height>
       </size>
      </property>
-     <property name="text">
-      <string>&amp;Rename</string>
+     <property name="readOnly">
+      <bool>true</bool>
      </property>
     </widget>
    </item>
-   <item row="5" column="0" colspan="3">
-    <widget class="QProgressBar" name="progressBar">
-     <property name="value">
-      <number>0</number>
+   <item row="0" column="0" colspan="3">
+    <widget class="QLabel" name="label">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>15</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>15</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>Last Source Directory:</string>
      </property>
     </widget>
    </item>
